--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ignacio Pacheco">
     <title>Product Preview Card Component</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    
+    <main id="main">
+        <section class="container">
+            <article class="article__img">
+                <img src="./image/image-product-mobile.jpg" alt="">
+            </article>
+            <article class="article__p">
+                <p class="p1">PERFUME</p>
+                <h1 class="h1">Gabrielle Essence Eau De Perfum</h1>
+                <p class="p2">A floral, solar and voluptuos interpretation compossed by Oliver Polge, Perfumer-Creator for the House of CHANEL.</p>
+            <article class="article__buttom">
+                <h2 class="precio">$149.99</h2> 
+                <p class="p__precio">$169.99</p>
+                <button><i class='bx bx-cart'></i>Add to cart</button>
+            </article>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
