Card Component Completado

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
             </article>
             <article class="article__p">
                 <p class="p1">PERFUME</p>
-                <h1 class="h1">Gabrielle Essence Eau De Perfum</h1>
+                <h2 class="h2">Gabrielle Essence Eau De Perfum</h2>
                 <p class="p2">A floral, solar and voluptuos interpretation compossed by Oliver Polge, Perfumer-Creator for the House of CHANEL.</p>
-            <article class="article__buttom">
-                <h2 class="precio">$149.99</h2> 
-                <p class="p__precio">$169.99</p>
-                <button><i class='bx bx-cart'></i>Add to cart</button>
-            </article>
-            </article>
+                <div class="precios">
+                    <p class="precio">$149.99</p>
+                    <p class="oferta">$169.99</p>
+                </div>
+                <div class="btn">
+                    <button><i class='bx bx-cart'></i>Add to Cart</button>
+                </div>
+            </article>    
         </section>
     </main>
 </body>
